kubectl_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-ccms-civil-soa-gateway-api
  namespace: laa-ccms-civil
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-ccms-civil-soa-gateway-api-laa-ccms-civil-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/access-log-path: "/var/log/nginx/access.log"
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/whitelist-source-range: 81.134.202.29/32,79.152.189.104/32,179.50.12.212/32,188.172.252.34/32,194.33.192.0/25,194.33.193.0/25,194.33.196.0/25,194.33.197.0/25,195.59.75.0/24,201.33.21.5/32,213.121.161.112/28,52.67.148.55/32,54.94.206.111/32,178.248.34.42/32,178.248.34.43/32,178.248.34.44/32,178.248.34.45/32,178.248.34.46/32,178.248.34.47/32,89.32.121.144/32,185.191.249.100/32,2.138.20.8/32,10.200.0.0/20,81.134.202.29/32,35.177.125.252/32,35.177.137.160/32,35.176.12 [...]
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<html> <head> <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'></head><body> <div class='container'> <div class='content'> <div class='title'>You are not authorised to access this application</div><div><br><br><b><a href='mailto:dex-xxe@ministryofjustice.zendesk.com?subject=Access%20support%20request%20Find%20Unclaimed%20Money' target='_top'>Contact Us</a></b> if you have any queries</div></div></div></body></html>";
      }
      error_page 403 @custom_403;

spec:
  ingressClassName: default
  tls:
    - hosts:
        - laa-ccms-civil.soa-gateway-api.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: laa-ccms-civil.soa-gateway-api.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: laa-ccms-civil-soa-gateway-api-service
                port:
                  number: 5000
